--- a/index.html
+++ b/index.html
@@ -139,16 +139,79 @@
 
 	<!-- /Banner -->
 	<!-- Main -->
-		<!--<div id="page">
+	<div id="page">
 
-			 Extra 
-			
-		</div>-->
+			<!-- Extra -->
+			<div id="marketing" class="container">
+				<div class="row">
+					<div class="3u">
+						<section>
+							<header>
+								<h2>PRINCIPIOS</h2>
+							</header>
+							<p class="subtitle">Principios de Seguridad y Conceptos Básicos.</p>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
+						</section>
+					</div>
+					<div class="3u">
+						<section>
+							<header>
+								<h2>SEGURIDAD EN INTERNET</h2>
+							</header>
+							<p class="subtitle">Conceptos de Seguridad en Internet.</p>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
+						</section>
+					</div>
+					<div class="3u">
+						<section>
+							<header>
+								<h2>SEGURIDAD DE USUARIO</h2>
+							</header>
+							<p class="subtitle">Importancia al Navegar en la Red.</p>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
+						</section>
+					</div>
+					<div class="3u">
+						<section>
+							<header>
+								<h2>EN LA OFICINA</h2>
+							</header>
+							<p class="subtitle">Conectarse a la red desde el trabajo.</p>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
+						</section>
+					</div>
+				</div>
+			</div>
+			<!-- /Extra -->
+				
+			<!-- Main -->
+			<div id="main" class="container">
+				<div class="row">
+					<div class="6u">
+						<section>
+							<header>
+								<h2>Tweets</h2>
+								<span class="byline"></span>
+							</header>
+							
+								<sript>
+								<a class="twitter-timeline" data-width="700" data-height="500" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	
+						</section>
+					</div>
+				</div>
+			</div>
+			<!-- Main -->
+
+		</div>
 	<!-- /Main -->
 
 	<!-- Featured -->				
 				<!-- Nav -->
-</div>
 		<div id="featured">
 			<div class="container">
 				<div class="row">
