--- a/principios de seguridad.html
+++ b/principios de seguridad.html
@@ -13,27 +13,56 @@
       	<h1>PRINCIPIOS DE SEGURIDAD</h1>
       </header>
       <nav>
-      		<ul>	
-				<li><a href="index.html">Principios de Seguridad</a></li>
-				<li><a href="index.html">Seguridad en la Internet</a></li>
-				<li><a href="index.html">Seguridad Nivel Usuario</a></li> 
-				<li><a href="index.html">Seguridad en la oficina</a></li>
-				<li><a href="index.html">Evita que te hacke-en</a></li>
-			</ul>
+      	<ul>	
+			<li><a href="index.html">Principios de Seguridad</a></li>
+			<li><a href="index.html">Seguridad en la Internet</a></li>
+			<li><a href="index.html">Seguridad Nivel Usuario</a></li> 
+			<li><a href="index.html">Seguridad en la oficina</a></li>
+			<li><a href="index.html">Evita que te hacke-en</a></li>
+		</ul>
+
       </nav >
-      <section id=contenedor>
-      	<section id= lectura>
+
+      <section id="contenedor">
+      	<section id= "lectura1">
+      		<h2>
+      			Principios de seguridad
+      		</h2>	
       		<article>
-      			&lt;ARTICLE&ge;
-      				
+      			<p>Si un sistema es seguro debe tener estas cuatro características: </p>
+				<P>Integridad: solo la persona con autorización puede modificar la información</P>
+				<P>Confidencialidad: solo las personas con autorización pueden ver la información</P>	
+				<p>Disponibilidad: de la información necesitada</p>
+				<P>Irrefutabilidad: existe una persona con acceso vigilado</P>	
+				<P>
+				</P>	
       		</article>	
       	</section >
-      	<aside>
-      		&lt;ASIDE&ge;
-      	</aside>
+      	
+      	<section id= "lectura2">
+      		<h3>
+      			Consejos básicos de seguridad
+      		</h3>	
+      		<article>
+      			<p>El Sistema Operativo y aplicaciones deben estar actualizadas. </p>
+				<P>Obtener e instalar software legal</P>	
+				<P>Usar contraseñas con un buen grado de complejidad</P>
+				<P>Utilizar herramientas de seguridad para proteger o reparar los ordenadores</P>
+				<P>Evitar bajar o ejecutar ficheros de sitios dudosos o procedentes de correos sospechosos o no solicitados</P>
+				<P>Analizar todas las descargas con el antivirus. </P>
+				<P>No facilitar la cuenta de correo, o datos bancarios a desconocidos o publicarla en sitios desconocidos</P>
+				<P>Consultar y realizar operaciones bancarias con URL httpS </P>	
+      		</article>	
+      	</section >
       </section>
 <footer>
-	UNIVERSIDAD ABIERTA Y A DISTANCIA UNAD
+	<div align="center">
+		<figure><a href="https://www.unad.edu.co"><img alt="Logo UNAD" src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNADMobile-HD.png" /></a></figure>
+		
+	</div>
 </footer>
+		<script src="js/jquery-3.3.1.js"></script>
+		<script src="js/modernizr-custom.js"></script>
+		<script src="js/prefixfree.js"></script>
 </body>
 </html>  
