--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						    <div class="dropdown-content">
 						      <a href="#">ACTIVIDAD I</a>
 						      <a href="#">ACTIVIDAD II</a>
-						       <a href="#Autor">Autores</a>
+						       <a href="#Autor">AUTORES</a>
 						    </div>
 						  </div> 
 						  <div class="dropdown">
