--- a/index.html
+++ b/index.html
@@ -105,17 +105,18 @@
 						<div class="navbar">
 						  <a href="#home">INICIO</a>
 						  <a href="#news">MULTIMEDIA</a>
+						  <a href="#news">AUTORES</a>
 						  <div class="dropdown">
 						    <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
 						    <div class="dropdown-content">
 						      <a href="#">ACTIVIDAD I</a>
 						      <a href="#">ACTIVIDAD II</a>
-						       <a href="#Autor">AUTORES</a>
+
 						    </div>
 						  </div> 
 						  <div class="dropdown">
 						    <button class="dropbtn">LECTURAS<i class="fa fa-caret-down"></i></button>
-						    <div class="dropdown-content">
+						    						    <div class="dropdown-content">
 						      <a href="principios de seguridad.html">PRINCIPIOS DE SEGURIDAD</a>
 						      <a href="seguridad en la internet.html">SEGURIDAD EN INTERNET</a>
 						      <a href="seguridad nivel usuario.html">SEGURIDAD NIVEL DEL USUARIO</a>
