--- a/autores.html
+++ b/autores.html
@@ -105,7 +105,7 @@
 						<div class="navbar">
 						  <a href="#home">INICIO</a>
 						  <a href="#news">MULTIMEDIA</a>
-						  <a href="autores.html">AUTORES</a>
+						  <a href="#news">AUTORES</a>
 						  <div class="dropdown">
 						    <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
 						    <div class="dropdown-content">
@@ -141,80 +141,72 @@
 
 	<!-- /Banner -->
 	<!-- Main -->
-	<div id="page">
-
-			<!-- Extra -->
-			<div id="marketing" class="container">
-				<div class="row">
-					<div class="3u">
-						<section>
-							<header>
-								<h2>PRINCIPIOS</h2>
-							</header>
-							<p class="subtitle">Principios de Seguridad y Conceptos Básicos.</p>
-							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
-							<a href="#" class="button">+Mas</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<header>
-								<h2>SEGURIDAD EN INTERNET</h2>
-							</header>
-							<p class="subtitle">Conceptos de Seguridad en Internet.</p>
-							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
-							<a href="#" class="button">+Mas</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<header>
-								<h2>SEGURIDAD DE USUARIO</h2>
-							</header>
-							<p class="subtitle">Importancia al Navegar en la Red.</p>
-							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
-							<a href="#" class="button">+Mas</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<header>
-								<h2>EN LA OFICINA</h2>
-							</header>
-							<p class="subtitle">Conectarse a la red desde el trabajo.</p>
-							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
-							<a href="#" class="button">+Mas</a>
-						</section>
+	
 					</div>
 				</div>
 			</div>
 			<!-- /Extra -->
 				
 			<!-- Main -->
-			<div id="main" class="container">
-				<div class="row">
-					<div class="6u">
-						<section>
-							<header>
-								<h2>Tweets</h2>
-								<span class="byline"></span>
-							</header>
-							
-								<sript>
-								<a class="twitter-timeline" data-width="700" data-height="500" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	
-						</section>
-					</div>
 				</div>
-			</div>
-			<!-- Main -->
-
-		</div>
 	<!-- /Main -->
 
 	<!-- Featured -->				
 				<!-- Nav -->
-		
+		<div id="featured">
+			<div class="container">
+				<div class="row">
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/estudiante1.jpg" alt=""></a>
+							<h3>Estudiante 1</h3>
+							<p>Amell Antonio Olarte</p>
+							<h3>Código</h3>
+							<p>1033712834</p>
+							<h3>Programa</h3>
+							<p>Ingeniería de Sistemas</p>
+							<h3>Correo Electrónico</h3>
+							<p>aaolarten@unadvirtual.edu.co</p>
+							<h3>Usuario Skype</h3>
+							<p>amellolarte</p>
+
+
+							<!--<a href="#" class="button">Mas</a>-->
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 2</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 3</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 4</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 5</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section><section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Instructor del curso</h3>
+							<p>XXXXXX</p>
+						</div>
 					</section>
 				</div>
 				<div class="divider"></div>
