--- a/Multimedia.html
+++ b/Multimedia.html
@@ -157,8 +157,7 @@
 		          <div class="box">
 		            <h3 align="center" class="subtitulom">SEGURIDAD INFORMATICA </h3>
 		             <h3 align="center">&nbsp;</h3>
-		            <a href="#" class="image left"><img src="images/multimedia2.png" alt=""></a>
-		            <a href="https://www.youtube.com/watch?v=wIe01QIFA8Q " class="image left"><img src="images/multimedia2.png" alt=""></a>
+		            <a href="videos/Seguridad.mp4" class="image left"><img src="images/multimedia2.png" alt=""></a>
         
           <p align="justify">La seguridad informática se resume, por lo general, en cinco objetivos principales: Integridad, Confidencialidad, Disponibilidad, Evitar el rechazo Y Autenticación</p>
         </div>
