--- a/Multimedia.html
+++ b/Multimedia.html
@@ -117,7 +117,12 @@
   
   <!-- Nav -->
   <nav id="nav">
-  <div class="navbar"> <a href="#home">INICIO</a> <a href="#Multimedia">MULTIMEDIA</a> <a href="#news">AUTORES</a>
+  <div class="navbar"> <a href="index.html">INICIO</a> 
+	  <div class="dropdown">
+      <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
+      <div class="dropdown-content"> <a href="Multimedia.html">VIDEOS</a> <a href="#">IMAGENES</a> </div>
+    </div>
+	  <a href="#news">AUTORES</a>
     <div class="dropdown">
       <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
       <div class="dropdown-content"> <a href="#">ACTIVIDAD I</a> <a href="#">ACTIVIDAD II</a> </div>
@@ -148,7 +153,7 @@
         <div class="box">
           <h3 align="center" class="subtitulom" >FUNDAMENTOS DE SEGURIDAD</h3>
           <h3 align="center">&nbsp;</h3>
-          <a href="https://www.youtube.com/watch?v=kamEjPUoVHc" class="image left"><img src="images/multimedia1.png" alt=""></a>
+          <a href="https://www.youtube.com/watch?v=1_nmQLRsSPU" class="image left"><img src="images/multimedia1.png" alt=""></a>
           <p align="justify">Se enfoca en la protección de la infraestructura computacional y todo lo relacionado con esta y, especialmente, la información contenida o circulante</p>
           <!--<a href="#" class="button">Mas</a>--> 
         </div>
