Cambios Lecturas3 Css
Cambios de la página de principios de seguridad

--- a/principios de seguridad.html
+++ b/principios de seguridad.html
@@ -5,14 +5,12 @@
 	<meta description="seguridad informática">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/stylecturas.css">
-	<title> Principios de seguridad</title>
 </head>
 <body>
       
       <header>
-      	<h1>PRINCIPIOS DE SEGURIDAD</h1>
-      </header>
-      <nav>
+      		<h1>PRINCIPIOS DE SEGURIDAD</h1>
+      	<nav>
       	<ul>	
 			<li><a href="index.html">Principios de Seguridad</a></li>
 			<li><a href="index.html">Seguridad en la Internet</a></li>
@@ -20,10 +18,19 @@
 			<li><a href="index.html">Seguridad en la oficina</a></li>
 			<li><a href="index.html">Evita que te hacke-en</a></li>
 		</ul>
-
       </nav >
+      <form>
+      	<input type="text" name="Buscar">
+      	<button type="submit">Buscar</button>
+      </form>
+      </header>
+
+      
 
       <section id="contenedor">
+      	<div id=banner>
+	
+      	</div>
       	<section id= "lectura1">
       		<h2>
       			Principios de seguridad
@@ -58,6 +65,11 @@
 <footer>
 	<div align="center">
 		<figure><a href="https://www.unad.edu.co"><img alt="Logo UNAD" src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNADMobile-HD.png" /></a></figure>
+		<div id= creditos>
+			<h4>
+				@2018 Desarrollado por el grupo 55 Diseño de sitios Web UNAD
+			</h4>
+		</div>
 		
 	</div>
 </footer>
