--- a/seguridad en la internet.html
+++ b/seguridad en la internet.html
@@ -28,7 +28,7 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h3><a href="#">seguridad en la internet</a></h3>
+						<h3><a href="#">Seguridad en la internet</a></h3>
 					</div>
 				
 				<!-- Nav -->
