--- a/autores.html
+++ b/autores.html
@@ -176,9 +176,18 @@
 					</section>
 					<section class="4u">
 						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image left"><img src="images/estudiante2.jpg" alt=""></a>
 							<h3>Estudiante 2</h3>
-							<p>XXXXXX</p>
+							<p>William Andrés Camelo</p>
+							<p>Código</p>
+							<p>1073236722</p>
+							<p>Programa</p>
+							<p>Ingeniería de sistemas</p>
+							<p>Correo electrónico</p>
+							<p>wacamelog@unadvirtual.edu.co</p>
+							<p>Usuario Skype</p>
+							<p>wcamelog</p>
+
 						</div>
 					</section>
 					<section class="4u">
