Autores y contador de visitas
Compañeros ya estan terminados el contador de visitas y la pagina de autores solo le falta actualizarse con cada uno de sus datos que se especifican en el foro...

Co-Authored-By: hackeram2018 <hackeram2018@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
 						</ul>
 						
 					</nav></DIV>
+
+					<div><a href="https://info.flagcounter.com/BlAp"><img src="https://s11.flagcounter.com/map/BlAp/size_s/txt_000000/border_3BCC92/pageviews_1/viewers_0/flags_0/" alt="Flag Counter" border="0"></a></div>
 	<!-- Footer -->
 		<div align="center">
 		<figure><a href="https://www.unad.edu.co"><img alt="Logo UNAD" src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNADMobile-HD.png" /></a></figure>
