--- a/Multimedia.html
+++ b/Multimedia.html
@@ -144,7 +144,7 @@
 <!-- Featured --> 
 <!-- Nav -->
 <h3 align="center">&nbsp;</h3>
-<h1 align="center" class="colorTitulo">MULTIMEDIA</h1>
+<h1 align="center" class="colorTitulo">VIDEOS</h1>
 <h3 align="center">&nbsp;</h3>
 <div id="featured">
   <div class="container">
@@ -186,11 +186,7 @@
 <!-- /Featured -->
 
 <DIV  class="container" align="right">
-  <nav>
-    <ul>
-      <li><a href="index.html">Volver>>></a></li>
-    </ul>
-  </nav>
+  <nav> </nav>
 </DIV>
 <!-- Footer -->
 <div align="center">
