--- a/Multimedia.html
+++ b/Multimedia.html
@@ -120,7 +120,7 @@
   <div class="navbar"> <a href="index.html">INICIO</a> 
 	  <div class="dropdown">
       <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
-      <div class="dropdown-content"> <a href="Multimedia.html">VIDEOS</a> <a href="#">IMAGENES</a> </div>
+      <div class="dropdown-content"> <a href="Multimedia.html">VIDEOS</a> <a href="Presentaciones.html">PRESENTACIONES</a> </div>
     </div>
 	  <a href="#news">AUTORES</a>
     <div class="dropdown">
@@ -133,6 +133,7 @@
     </div>
     </nav>
   </div>
+	<p>&nbsp;</p>
 </div>
 <!--container i--> 
 <!-- Header --> 
@@ -171,7 +172,7 @@
         <div class="box"> 
 			  <h3 align="center" class="subtitulom">ISO 27001:2013 </h3>
 		             <h3 align="center">&nbsp;</h3>
-			<a href="https://www.youtube.com/watch?v=EqTgSPNm7dY" class="image left"><img src="images/multimedia3.png" alt=""></a>
+			<a href="" class="image left"><img src="images/multimedia3.png" alt=""></a>
           
           <p align="justify">Uno de los cambios que se han producido en éste área es la evaluación y aprendizaje de los eventos de seguridad de TI que se centra en el programa de respuesta a incidentes.</p>
         </div>
