--- a/principios de seguridad.html
+++ b/principios de seguridad.html
@@ -12,17 +12,14 @@
       		<h1>PRINCIPIOS DE SEGURIDAD</h1>
       	<nav>
       	<ul>	
-			<li><a href="index.html">Principios de Seguridad</a></li>
-			<li><a href="index.html">Seguridad en la Internet</a></li>
-			<li><a href="index.html">Seguridad Nivel Usuario</a></li> 
-			<li><a href="index.html">Seguridad en la oficina</a></li>
-			<li><a href="index.html">Evita que te hacke-en</a></li>
+			<li><a href="principios de seguridad.html">Principios de Seguridad</a></li>
+			<li><a href="seguridad en la internet.html">Seguridad en la Internet</a></li>
+			<li><a href="seguridad nivel usuario.html">Seguridad Nivel Usuario</a></li> 
+			<li><a href="seguridad en la oficina.html">Seguridad en la oficina</a></li>
+			<li><a href="evita que te hacke-en.html">Evita que te hacke-en</a></li>
 		</ul>
       </nav >
-      <form>
-      	<input type="text" name="Buscar">
-      	<button type="submit">Buscar</button>
-      </form>
+
       </header>
 
       
@@ -61,6 +58,10 @@
 				<P>Consultar y realizar operaciones bancarias con URL httpS </P>	
       		</article>	
       	</section >
+
+      	<form id="Volver" action="index.html">
+      		<input type="submit" value="Volver>>>">
+      	</form>
       </section>
 <footer>
 	<div align="center">
