--- a/actividad1.html
+++ b/actividad1.html
@@ -103,7 +103,7 @@
 				<!-- Nav -->
 				<nav id="nav">
 						<div class="navbar">
-						  <a href="#home">INICIO</a>
+						  <a href="index.html">INICIO</a>
 						  <a href="#news">MULTIMEDIA</a>
 						  <a href="autores.html">AUTORES</a>
 						  <div class="dropdown">
@@ -117,7 +117,7 @@
 						  </div> 
 						  <div class="dropdown">
 						    <button class="dropbtn">LECTURAS<i class="fa fa-caret-down"></i></button>
-						    <div class="dropdown-content">
+						    						    <div class="dropdown-content">
 						      <a href="principios de seguridad.html">PRINCIPIOS DE SEGURIDAD</a>
 						      <a href="seguridad en la internet.html">SEGURIDAD EN INTERNET</a>
 						      <a href="seguridad nivel usuario.html">SEGURIDAD NIVEL DEL USUARIO</a>
@@ -136,130 +136,27 @@
 	<!-- Banner -->
 		<div id="banner">
 			<div class="container">
+			
 			</div>
 		</div>
 
 
 	<!-- /Banner -->
 	<!-- Main -->
-	<div id="page">
+	<div id="page" align="center">
 
+			<div id="logon" align="center">
+			<h1><a>Actividad I - Quiz</a></h1>
+			<br></br>
+			</div>
 			<!-- Extra -->
-			<div id="marketing" class="container">
-				<div class="row">
-					<div class="3u">
-						<section>
-							<header>
-								<h2>PRINCIPIOS</h2>
-							</header>
-							<p class="subtitle">Principios de Seguridad y Conceptos Básicos.</p>
-							<p><a href="principios de seguridad.html"><img src="images/pics17_.jpg" alt=""></a></p>
-							<a href="principios de seguridad.html" class="button">+Mas</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<header>
-								<h2>SEGURIDAD EN INTERNET</h2>
-							</header>
-							<p class="subtitle">Conceptos de Seguridad en Internet.</p>
-							<p><a href="seguridad%20en%20la%20internet.html"><img src="images/pics14_.jpg" alt=""></a></p>
-							<a href="seguridad%20en%20la%20internet.html" class="button">+Mas</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<header>
-								<h2>SEGURIDAD DE USUARIO</h2>
-							</header>
-							<p class="subtitle">Importancia al Navegar en la Red.</p>
-							<p><a href="seguridad nivel usuario.html"><img src="images/pics16_.jpg" alt=""></a></p>
-							<a href="seguridad nivel usuario.html" class="button">+Mas</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<header>
-								<h2>EN LA OFICINA</h2>
-							</header>
-							<p class="subtitle">Conectarse a la red desde el trabajo.</p>
-							<p><a href="seguridad en la oficina.html"><img src="images/pics15_.jpg" alt=""></a></p>
-							<a href="seguridad en la oficina.html" class="button">+Mas</a>
-						</section>
-					</div>
-				</div>
+			<div id="marketing" class="container" align="center">
+			<iframe name='proprofs' id='proprofs' width='450' height='615' frameborder=0 marginwidth=0 marginheight=0 src='https://www.proprofs.com/quiz-school/story.php?title=job-assessment-quiz_35ft&id=2169295&ew=430'></iframe><div style='font-size:10px; font-family:Arial, Helvetica, sans-serif; color:#000;text-align:left;'><a href='https://www.proprofs.com/quiz-school/story.php?title=job-assessment-quiz_35ft' target='_blank' title='ProProfs - Quiz de Seguridad Informatica'></a></div>
+
 			</div>
 			<!-- /Extra -->
 				
 			<!-- Main -->
-			<div id="main" class="container">
-				<div class="row">
-					<div class="6u">
-						<section>
-							<header>
-								<h2>Tweets</h2>
-								<span class="byline"></span>
-							</header>
-							
-								<sript>
-								<a class="twitter-timeline" data-width="700" data-height="500" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	
-						</section>
-					</div>
-					<div class="3u">
-						<section class="sidebar">
-							<header>
-								<h2>Actividades</h2>
-							</header>
-							<ul class="style2">
-								<li>
-									<a href="actividad1.html"><img src="images/pic_Encuesta.jpg" alt=""></a>
-									<p>Evalua tus conocimientos, con un sencillo test sobre seguridad informática</p>
-								</li>
-								<li>
-									<a href="actividad2.html"><img src="images/pic_Survey.jpg" alt=""></a>
-									<p>Responde una rápida encuesta sobre tus hábitos en internet</p>
-								</li>
-								<li>
-									<a href="actividad3.html"><img src="images/pic_Game.jpg" alt=""></a>
-									<p>Diviértete jugando y aprendiendo a mantener tus post seguros.</p>
-								</li>
-								<li>
-									<a href="Multimedia.html"><img src="images/pics18_.jpg" alt=""></a>
-									<p>Explora nuestro contenido multimedia sobre seguridad informática.</p>
-								</li>
-							</ul>						
-						</section>
-					</div>
-					<div class="3u">
-						<section class="sidebar">
-							<header>
-								<h2>Lecturas</h2>
-							</header>
-							<ul class="style1">
-								<li><a href="principios de seguridad.html">Principios de Seguridad</a></li>
-								<li><a href="seguridad%20en%20la%20internet.html">Seguridad en Internet</a></li>
-								<li><a href="seguridad nivel usuario.html">Nivel Seguridad de usuario</a></li>
-								<li><a href="seguridad en la oficina.html">Seguridad en la oficina</a></li>
-								<li><a href="evita que te hacke-en.html">Evita que te hacke-en</a></li>
-							</ul>
-						</section>
-						<section class="sidebar">
-							<header>
-								<h2>Conoce el equipo</h2>
-							</header>
-							<ul class="style1">
-								<li><a href="autores.html">Amell Antonio Olarte</a></li>
-								<li><a href="autores.html">William Andres Camelo</a></li>
-								<li><a href="autores.html">Claudia Yamile Pinilla</a></li>
-								<li><a href="autores.html">Estudiante 4</a></li>
-								<li><a href="autores.html">Josue Ignacio Ochoa</a></li>
-								<li><a href="autores.html">Hernan Mauricio Perez</a></li>
-							</ul>
-						</section>
-					</div>
-				</div>
-			</div>
 			<!-- Main -->
 
 		</div>
