--- a/Multimedia.html
+++ b/Multimedia.html
@@ -122,10 +122,11 @@
       <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
       <div class="dropdown-content"> <a href="Multimedia.html">VIDEOS</a> <a href="Presentaciones.html">PRESENTACIONES</a> </div>
     </div>
-	  <a href="#news">AUTORES</a>
+	  <a href="autores.html">AUTORES</a>
     <div class="dropdown">
       <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
-      <div class="dropdown-content"> <a href="#">ACTIVIDAD I</a> <a href="#">ACTIVIDAD II</a> </div>
+      <div class="dropdown-content"> <a href="actividad1.html">ACTIVIDAD I</a> <a href="actividad2.html">ACTIVIDAD II</a>  <a href="actividad3.html">ACTIVIDAD III</a>
+		</div>
     </div>
     <div class="dropdown">
       <button class="dropbtn">LECTURAS<i class="fa fa-caret-down"></i></button>
