--- a/Presentaciones.html
+++ b/Presentaciones.html
@@ -112,15 +112,15 @@
   margin-bottom: 20px; 
   background: #eee; 
 }
+
+		.alinear{ margin-left: 2%; }
+.4uu { margin-left: 20%; }
 	
-	.\-4uu { margin-left: 20% }
-	
-	.alinear{ margin-left: 2% }
+
 </style>
 
 <!-- Header -->
 <div id="header">
-<!-- container i-->
 <div class="container" align="center"> 
   
   <!-- Logo -->
@@ -132,22 +132,23 @@
   <nav id="nav">
   <div class="navbar"> <a href="index.html">INICIO</a> 
 	  <div class="dropdown">
-      <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
-      <div class="dropdown-content"> <a href="Multimedia.html">VIDEOS</a> <a href="#">IMAGENES</a> </div>
+      <button class="dropbtn" href="Multimedia.html">MULTIMEDIA<em class="fa fa-caret-down"></em></button>
+      <div class="dropdown-content"> <a href="Multimedia.html">VIDEOS</a> <a href="Presentaciones.html">PRESENTACIONES</a> </div>
     </div>
-	  <a href="#news">AUTORES</a>
+	  <a href="autores.html">AUTORES</a>
     <div class="dropdown">
-      <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
-      <div class="dropdown-content"> <a href="#">ACTIVIDAD I</a> <a href="#">ACTIVIDAD II</a> </div>
+      <button class="dropbtn" href="actividad1.html">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
+      <div class="dropdown-content"> <a href="actividad1.html">ACTIVIDAD I</a> <a href="actividad2.html">ACTIVIDAD II</a>  <a href="actividad3.html">ACTIVIDAD III</a>
+		</div>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">LECTURAS<i class="fa fa-caret-down"></i></button>
+      <button class="dropbtn" href="principios de seguridad.html">LECTURAS<i class="fa fa-caret-down"></i></button>
       <div class="dropdown-content"> <a href="principios de seguridad.html">PRINCIPIOS DE SEGURIDAD</a> <a href="seguridad en la internet.html">SEGURIDAD EN INTERNET</a> <a href="seguridad nivel usuario.html">SEGURIDAD NIVEL DEL USUARIO</a> <a href="isegurida en la oficina.html">SEGURIDAD EN LA OFICINA</a> <a href="evita que te hacke-en">EVITA QUE TE HACKE-EN</a> </div>
     </div>
     </nav>
   </div>
 </div>
-<!--container i--> 
+	<!--container i--> 
 <!-- Header --> 
 
 <!-- Banner --> 
@@ -156,6 +157,7 @@
 
 <!-- Featured --> 
 <!-- Nav -->
+	
 <h3 align="center">&nbsp;</h3>
 <h1 align="center" class="colorTitulo">presentaciones</h1>
 <h3 align="center">&nbsp;</h3>
