--- a/index.html
+++ b/index.html
@@ -103,21 +103,25 @@
 				<!-- Nav -->
 				<nav id="nav">
 						<div class="navbar">
-						  <a href="#home">INICIO</a>
-						  <a href="#news">MULTIMEDIA</a>
-						  <a href="autores.html">AUTORES</a>
-						  <div class="dropdown">
-						    <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
+						  <a href="index.html">INICIO</a>
+						   <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
 						    <div class="dropdown-content">
-						      <a href="actividad1.html">ACTIVIDAD I</a>
-						      <a href="actividad2.html">ACTIVIDAD II</a>
-						      <a href="actividad3.html">ACTIVIDAD III</a>
+						      <a href="#">ACTIVIDAD I</a>
+						      <a href="#">ACTIVIDAD II</a>
+
+						    </div>
+						  <a href="#news">AUTORES</a>
+						  <div class="dropdown">
+						    <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
+						    <div class="dropdown-content">
+						      <a href="Multimedia.html">VIDEOS</a>
+						      <a href="Presentaciones.html">PRESENTACIONES</a>
 
 						    </div>
 						  </div> 
 						  <div class="dropdown">
 						    <button class="dropbtn">LECTURAS<i class="fa fa-caret-down"></i></button>
-						    <div class="dropdown-content">
+						    						    <div class="dropdown-content">
 						      <a href="principios de seguridad.html">PRINCIPIOS DE SEGURIDAD</a>
 						      <a href="seguridad en la internet.html">SEGURIDAD EN INTERNET</a>
 						      <a href="seguridad nivel usuario.html">SEGURIDAD NIVEL DEL USUARIO</a>
@@ -153,8 +157,8 @@
 								<h2>PRINCIPIOS</h2>
 							</header>
 							<p class="subtitle">Principios de Seguridad y Conceptos Básicos.</p>
-							<p><a href="principios de seguridad.html"><img src="images/pics17_.jpg" alt=""></a></p>
-							<a href="principios de seguridad.html" class="button">+Mas</a>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
 						</section>
 					</div>
 					<div class="3u">
@@ -163,8 +167,8 @@
 								<h2>SEGURIDAD EN INTERNET</h2>
 							</header>
 							<p class="subtitle">Conceptos de Seguridad en Internet.</p>
-							<p><a href="seguridad%20en%20la%20internet.html"><img src="images/pics14_.jpg" alt=""></a></p>
-							<a href="seguridad%20en%20la%20internet.html" class="button">+Mas</a>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
 						</section>
 					</div>
 					<div class="3u">
@@ -173,8 +177,8 @@
 								<h2>SEGURIDAD DE USUARIO</h2>
 							</header>
 							<p class="subtitle">Importancia al Navegar en la Red.</p>
-							<p><a href="seguridad nivel usuario.html"><img src="images/pics16_.jpg" alt=""></a></p>
-							<a href="seguridad nivel usuario.html" class="button">+Mas</a>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
 						</section>
 					</div>
 					<div class="3u">
@@ -183,8 +187,8 @@
 								<h2>EN LA OFICINA</h2>
 							</header>
 							<p class="subtitle">Conectarse a la red desde el trabajo.</p>
-							<p><a href="seguridad en la oficina.html"><img src="images/pics15_.jpg" alt=""></a></p>
-							<a href="seguridad en la oficina.html" class="button">+Mas</a>
+							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
+							<a href="#" class="button">+Mas</a>
 						</section>
 					</div>
 				</div>
@@ -206,58 +210,6 @@
 	
 						</section>
 					</div>
-					<div class="3u">
-						<section class="sidebar">
-							<header>
-								<h2>Actividades</h2>
-							</header>
-							<ul class="style2">
-								<li>
-									<a href="actividad1.html"><img src="images/pic_Encuesta.jpg" alt=""></a>
-									<p>Evalua tus conocimientos, con un sencillo test sobre seguridad informática</p>
-								</li>
-								<li>
-									<a href="actividad2.html"><img src="images/pic_Survey.jpg" alt=""></a>
-									<p>Responde una rápida encuesta sobre tus hábitos en internet</p>
-								</li>
-								<li>
-									<a href="actividad3.html"><img src="images/pic_Game.jpg" alt=""></a>
-									<p>Diviértete jugando y aprendiendo a mantener tus post seguros.</p>
-								</li>
-								<li>
-									<a href="Multimedia.html"><img src="images/pics18_.jpg" alt=""></a>
-									<p>Explora nuestro contenido multimedia sobre seguridad informática.</p>
-								</li>
-							</ul>						
-						</section>
-					</div>
-					<div class="3u">
-						<section class="sidebar">
-							<header>
-								<h2>Lecturas</h2>
-							</header>
-							<ul class="style1">
-								<li><a href="principios de seguridad.html">Principios de Seguridad</a></li>
-								<li><a href="seguridad%20en%20la%20internet.html">Seguridad en Internet</a></li>
-								<li><a href="seguridad nivel usuario.html">Nivel Seguridad de usuario</a></li>
-								<li><a href="seguridad en la oficina.html">Seguridad en la oficina</a></li>
-								<li><a href="evita que te hacke-en.html">Evita que te hacke-en</a></li>
-							</ul>
-						</section>
-						<section class="sidebar">
-							<header>
-								<h2>Conoce el equipo</h2>
-							</header>
-							<ul class="style1">
-								<li><a href="autores.html">Amell Antonio Olarte</a></li>
-								<li><a href="autores.html">William Andres Camelo</a></li>
-								<li><a href="autores.html">Claudia Yamile Pinilla</a></li>
-								<li><a href="autores.html">Estudiante 4</a></li>
-								<li><a href="autores.html">Josue Ignacio Ochoa</a></li>
-								<li><a href="autores.html">Hernan Mauricio Perez</a></li>
-							</ul>
-						</section>
-					</div>
 				</div>
 			</div>
 			<!-- Main -->
@@ -267,7 +219,50 @@
 
 	<!-- Featured -->				
 				<!-- Nav -->
-		
+		<div id="featured">
+			<div class="container">
+				<div class="row">
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 1</h3>
+							<p>XXXXXX</p>
+							<!--<a href="#" class="button">Mas</a>-->
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 2</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 3</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 4</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 5</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section><section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Instructor del curso</h3>
+							<p>XXXXXX</p>
+						</div>
 					</section>
 				</div>
 				<div class="divider"></div>
@@ -281,8 +276,6 @@
 						</ul>
 						
 					</nav></DIV>
-
-					<div><a href="https://info.flagcounter.com/BlAp"><img src="https://s11.flagcounter.com/map/BlAp/size_s/txt_000000/border_3BCC92/pageviews_1/viewers_0/flags_0/" alt="Flag Counter" border="0"></a></div>
 	<!-- Footer -->
 		<div align="center">
 		<figure><a href="https://www.unad.edu.co"><img alt="Logo UNAD" src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNADMobile-HD.png" /></a></figure>
