--- a/index.html
+++ b/index.html
@@ -103,17 +103,22 @@
 				<!-- Nav -->
 				<nav id="nav">
 						<div class="navbar">
-						  <a href="#home">INICIO</a>
-						  <a href="#news">MULTIMEDIA</a>
-						  <a href="autores.html">AUTORES</a>
+						  <a href="index.html">INICIO</a>
+						   
+						  <a href="#news">AUTORES</a>
 						  <div class="dropdown">
-						    <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
+						    <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
 						    <div class="dropdown-content">
-						      <a href="#">ACTIVIDAD I</a>
-						      <a href="#">ACTIVIDAD II</a>
+						      <a href="Multimedia.html">VIDEOS</a>
+						      <a href="Presentaciones.html">PRESENTACIONES</a>
 
 						    </div>
 						  </div> 
+							<div class="dropdown">
+      <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
+      <div class="dropdown-content"> <a href="actividad1.html">ACTIVIDAD I</a> <a href="actividad2.html">ACTIVIDAD II</a>  <a href="actividad3.html">ACTIVIDAD III</a>
+		</div>
+    </div>
 						  <div class="dropdown">
 						    <button class="dropbtn">LECTURAS<i class="fa fa-caret-down"></i></button>
 						    						    <div class="dropdown-content">
@@ -214,7 +219,50 @@
 
 	<!-- Featured -->				
 				<!-- Nav -->
-		
+		<div id="featured">
+			<div class="container">
+				<div class="row">
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 1</h3>
+							<p>XXXXXX</p>
+							<!--<a href="#" class="button">Mas</a>-->
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 2</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 3</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 4</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section>
+					<section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Estudiante 5</h3>
+							<p>XXXXXX</p>
+						</div>
+					</section><section class="4u">
+						<div class="box">
+							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<h3>Instructor del curso</h3>
+							<p>XXXXXX</p>
+						</div>
 					</section>
 				</div>
 				<div class="divider"></div>
