correciones pagina autories y contador de visitas centralizado..
se efectuan correcciones a espera para que el proyecto se suba a GitHub Pages

Co-Authored-By: hackeram2018 <hackeram2018@users.noreply.github.com>

--- a/autores.html
+++ b/autores.html
@@ -103,14 +103,14 @@
 				<!-- Nav -->
 				<nav id="nav">
 						<div class="navbar">
-						  <a href="#home">INICIO</a>
-						  <a href="#news">MULTIMEDIA</a>
-						  <a href="#news">AUTORES</a>
+						  <a href="index.html">INICIO</a>
+						  <a href="Multimedia.html">MULTIMEDIA</a>
+						  <a href="autores.html">AUTORES</a>
 						  <div class="dropdown">
 						    <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
 						    <div class="dropdown-content">
-						      <a href="#">ACTIVIDAD I</a>
-						      <a href="#">ACTIVIDAD II</a>
+						      <a href="actividad1.html">ACTIVIDAD I</a>
+						      <a href="actividad2.html">ACTIVIDAD II</a>
 
 						    </div>
 						  </div> 
