--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="navbar">
 						  <a href="index.html">INICIO</a>
 						   
-						  <a href="#news">AUTORES</a>
+						  <a href="autores.html">AUTORES</a>
 						  <div class="dropdown">
 						    <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
 						    <div class="dropdown-content">
@@ -224,44 +224,39 @@
 				<div class="row">
 					<section class="4u">
 						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image left"><img src="images/estudiante1.jpg" alt=""></a>
 							<h3>Estudiante 1</h3>
-							<p>XXXXXX</p>
+							<p>Amell Antonio Olarte</p>
 							<!--<a href="#" class="button">Mas</a>-->
 						</div>
 					</section>
 					<section class="4u">
 						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image left"><img src="images/estudiante2.jpg" alt=""></a>
 							<h3>Estudiante 2</h3>
-							<p>XXXXXX</p>
+							<p>Hernan Mauricio Perez</p>
 						</div>
 					</section>
 					<section class="4u">
 						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image left"><img src="images/estudiante3.jpg" alt=""></a>
 							<h3>Estudiante 3</h3>
-							<p>XXXXXX</p>
+							<p>William Andres Camelo</p>
 						</div>
 					</section>
 					<section class="4u">
 						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image left"><img src="images/estudiante4.png" alt=""></a>
 							<h3>Estudiante 4</h3>
-							<p>XXXXXX</p>
+							<p>Claudia Yamile Pinilla</p>
 						</div>
 					</section>
-					<section class="4u">
-						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
-							<h3>Estudiante 5</h3>
-							<p>XXXXXX</p>
-						</div>
-					</section><section class="4u">
-						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
+
+					<section>
+							<div class="box">
+							<a href="#" class="image left"><img src="images/instructor.jpg" alt=""></a>
 							<h3>Instructor del curso</h3>
-							<p>XXXXXX</p>
+							<p>Jose Ignacio Ochoa</p>
 						</div>
 					</section>
 				</div>
@@ -276,6 +271,8 @@
 						</ul>
 						
 					</nav></DIV>
+
+					<div align="center"> <a href="https://info.flagcounter.com/BlAp"><img src="https://s11.flagcounter.com/map/BlAp/size_s/txt_000000/border_3BCC92/pageviews_1/viewers_0/flags_0/" alt="Flag Counter" border="0"></a></div>
 	<!-- Footer -->
 		<div align="center">
 		<figure><a href="https://www.unad.edu.co"><img alt="Logo UNAD" src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNADMobile-HD.png" /></a></figure>
