Inserción y ajustes de lecturas3
Se realiza cambios de parametros de los créditos de la página e inserción de información de la pagina seguridad en la oficina

--- a/seguridad en la internet.html
+++ b/seguridad en la internet.html
@@ -59,19 +59,17 @@
       			<p>Los servidores FTP no suelen encontrarse en los ordenadores personales, por lo que un usuario utilizará el FTP para conectarse para intercambiar información con él, existen protocolos de comunicación FTP para que los datos se transmitan cifrados, como el SFTP (Secure File Transfer Protocol) brindando un nivel de seguridad adicional a ingresos inescrupulosos</p>
       		</article>	
       	</section >
-<div id=return>
+<div id="return">
       <form id="Volver" action="index.html">
                   <input type="submit" value="Volver>>>">
             </form>
 </div>
       	
    </section>
-
-
 	<footer>
 			<div align="center">
 				<figure><a href="https://www.unad.edu.co"><img alt="Logo UNAD" src="https://www.unad.edu.co/templates/unadgeneral/images/logoUNADMobile-HD.png" /></a></figure>
-			<div id= creditos>
+			<div id= "creditos">
 				<h3>
 				@2018 Desarrollado por el grupo 55 Diseño de sitios Web UNAD
 				</h3>
