--- a/Presentaciones.html
+++ b/Presentaciones.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Ex Machina by TEMPLATED
+  Ex Machina by TEMPLATED
     templated.co @templatedco
     Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
@@ -32,7 +32,7 @@
 </head>
 <body class="homepage">
 <style>
-	
+  
 .navbar {
     overflow: hidden;
     background-color: #333;
@@ -93,63 +93,77 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
-	.colorTitulo
-	{
-	color: #ffffff;
-		font-size: 30px;
-		font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif"
-	}
-	
-	.subtitulom
-	{
-	font-style: bold;
-		font-size: 20px;
-		font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif"
-	}
-	
-	.box1  { 
+  .colorTitulo
+  {
+  color: #ffffff;
+    font-size: 30px;
+    font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif"
+  }
+  
+  .subtitulom
+  {
+  font-style: bold;
+    font-size: 20px;
+    font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif"
+  }
+  
+  .box1  { 
   padding: 20px; 
   margin-bottom: 20px; 
   background: #eee; 
 }
 
-		.alinear{ margin-left: 2%; }
+    .alinear{ margin-left: 2%; }
 .4uu { margin-left: 20%; }
-	
+  
 
 </style>
 
-<!-- Header -->
-<div id="header">
-<div class="container" align="center"> 
-  
-  <!-- Logo -->
-  <div id="logo">
-    <h1><a href="#">Seguridad Informática</a></h1>
-  </div>
-  
-  <!-- Nav -->
-  <nav id="nav">
-  <div class="navbar"> <a href="index.html">INICIO</a> 
-	  <div class="dropdown">
-      <button class="dropbtn" href="Multimedia.html">MULTIMEDIA<em class="fa fa-caret-down"></em></button>
-      <div class="dropdown-content"> <a href="Multimedia.html">VIDEOS</a> <a href="Presentaciones.html">PRESENTACIONES</a> </div>
-    </div>
-	  <a href="autores.html">AUTORES</a>
-    <div class="dropdown">
-      <button class="dropbtn" href="actividad1.html">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
-      <div class="dropdown-content"> <a href="actividad1.html">ACTIVIDAD I</a> <a href="actividad2.html">ACTIVIDAD II</a>  <a href="actividad3.html">ACTIVIDAD III</a>
-		</div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn" href="principios de seguridad.html">LECTURAS<i class="fa fa-caret-down"></i></button>
-      <div class="dropdown-content"> <a href="principios de seguridad.html">PRINCIPIOS DE SEGURIDAD</a> <a href="seguridad en la internet.html">SEGURIDAD EN INTERNET</a> <a href="seguridad nivel usuario.html">SEGURIDAD NIVEL DEL USUARIO</a> <a href="isegurida en la oficina.html">SEGURIDAD EN LA OFICINA</a> <a href="evita que te hacke-en">EVITA QUE TE HACKE-EN</a> </div>
-    </div>
-    </nav>
-  </div>
-</div>
-	<!--container i--> 
-<!-- Header --> 
+  <!-- Header -->
+  <div id="header"><!-- container i-->
+      <div class="container" align="center">
+          
+        <!-- Logo -->
+          <div id="logo">
+            <h1><a href="#">Seguridad Informática</a></h1>
+          </div>
+        
+        <!-- Nav -->
+        <nav id="nav">
+            <div class="navbar">
+              <a href="index.html">INICIO</a>
+              <a href="autores.html">AUTORES</a>
+                <div class="dropdown">
+                  <button class="dropbtn">MULTIMEDIA<i class="fa fa-caret-down"></i></button>
+                     <div class="dropdown-content">
+                        <a href="Multimedia.html">VIDEOS</a>
+                      <a href="Presentaciones.html">PRESENTACIONES</a>
+                     </div>
+                </div> 
+
+              <div class="dropdown">
+                   <button class="dropbtn">ACTIVIDADES<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-content"> <a href="actividad1.html">ACTIVIDAD I</a> 
+                          <a href="actividad2.html">ACTIVIDAD II</a> 
+                          <a href="actividad3.html">ACTIVIDAD III</a> 
+                          <a href="actividad4.html">ACTIVIDAD IV</a>
+                    </div>
+                </div>
+              <div class="dropdown">
+                   <button class="dropbtn">LECTURAS<i class="fa fa-caret-down"></i></button>
+                      <div class="dropdown-content">
+                          <a href="principios de seguridad.html">PRINCIPIOS DE SEGURIDAD</a>
+                        <a href="seguridad en la internet.html">SEGURIDAD EN INTERNET</a>
+                          <a href="seguridad nivel usuario.html">SEGURIDAD NIVEL DEL USUARIO</a>
+                          <a href="isegurida en la oficina.html">SEGURIDAD EN LA OFICINA</a>
+                          <a href="evita que te hacke-en">EVITA QUE TE HACKE-EN</a>
+                      </div>
+              </div> 
+        </nav>
+        <!-- Nav -->
+      </div>
+    </div><!--container i-->
+  <!-- Header -->
 
 <!-- Banner --> 
 <!-- /Banner --> 
@@ -157,41 +171,41 @@
 
 <!-- Featured --> 
 <!-- Nav -->
-	
+  
 <h3 align="center">&nbsp;</h3>
 <h1 align="center" class="colorTitulo">presentaciones</h1>
 <h3 align="center">&nbsp;</h3>
 <div id="featured">
-	
+  
   <div class="container">
     <section class="alinear">f
-	    <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
-	      <ol class="carousel-indicators">
-	        <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
-	        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
-	        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+      <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
           </ol>
-	      <div class="carousel-inner" role="listbox">
-	        <div class="carousel-item active"> <img class="d-block mx-auto" src="images/seguridad1.png" alt="First slide">
-	          <div class="carousel-caption">
-	            <h5>First slide Heading</h5>
-	            <p>First slide Caption</p>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active"> <img class="d-block mx-auto" src="images/seguridad1.png" alt="First slide">
+            <div class="carousel-caption">
+              <h5>First slide Heading</h5>
+              <p>First slide Caption</p>
               </div>
             </div>
-	        <div class="carousel-item"> <img class="d-block mx-auto" src="images/seguridad3.png" alt="Second slide">
-	          <div class="carousel-caption">
-	            <h5>Second slide Heading</h5>
-	            <p>Second slide Caption</p>
+          <div class="carousel-item"> <img class="d-block mx-auto" src="images/seguridad3.png" alt="Second slide">
+            <div class="carousel-caption">
+              <h5>Second slide Heading</h5>
+              <p>Second slide Caption</p>
               </div>
             </div>
-	        <div class="carousel-item"> <img class="d-block mx-auto" src="images/multimedia3.png" alt="Third slide">
-	          <div class="carousel-caption">
-	            <h5>Third slide Heading</h5>
-	            <p>Third slide Caption</p>
+          <div class="carousel-item"> <img class="d-block mx-auto" src="images/multimedia3.png" alt="Third slide">
+            <div class="carousel-caption">
+              <h5>Third slide Heading</h5>
+              <p>Third slide Caption</p>
               </div>
             </div>
           </div>
-	      <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
  </section>
       <section class="4u"> </section>
     <div class="row">
