--- a/seguridad en la internet.html
+++ b/seguridad en la internet.html
@@ -72,6 +72,7 @@
 			<div id= "creditos">
 				<h3>
 				@2018 Desarrollado por el grupo 55 Diseño de sitios Web UNAD
+                        <p>comunicaciones, D. g. (s.f.). www.dgtic.tabasco.gob.mx. Obtenido de http://dgtic.tabasco.gob.mx/sites/all/files/vol/dgtic.tabasco.gob.mx/fi/Manual%20de%20Seguridad%20Informatica%20Basica.pdf</p>
 				</h3>
 			</div>
 		
