--- a/seguridad en la oficina.html
+++ b/seguridad en la oficina.html
@@ -80,6 +80,7 @@ Nos proveen el respaldo de la copia de la información manteniéndolas en lugare
                   <div id= creditos>
                         <h3>
                         @2018 Desarrollado por el grupo 55 Diseño de sitios Web UNAD
+                        <p>comunicaciones, D. g. (s.f.). www.dgtic.tabasco.gob.mx. Obtenido de http://dgtic.tabasco.gob.mx/sites/all/files/vol/dgtic.tabasco.gob.mx/fi/Manual%20de%20Seguridad%20Informatica%20Basica.pdf</p>
                         </h3>
                   </div>
             
