--- a/seguridad nivel usuario.html
+++ b/seguridad nivel usuario.html
@@ -86,6 +86,7 @@ También se le llama virus informático para su eliminación debemos tener en cu
 			<div id= creditos>
 				<h3>
 				@2018 Desarrollado por el grupo 55 Diseño de sitios Web UNAD
+                        <p>comunicaciones, D. g. (s.f.). www.dgtic.tabasco.gob.mx. Obtenido de http://dgtic.tabasco.gob.mx/sites/all/files/vol/dgtic.tabasco.gob.mx/fi/Manual%20de%20Seguridad%20Informatica%20Basica.pdf</p>
 				</h3>
 			</div>
 		
