--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 
 		
 	<!-- Banner -->
-		<div id="banner">
+		<section class="banner">
 			<div class="container">
 			</div>
-		</div>
+		</section>
 
 
 	<!-- /Banner -->
